# backend-photos

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile
src/: main.rs
src/entities/: directory.rs  flickr_photo.rs  flickr_photo_size.rs  flickr_photoset.rs  flickr_photoset_tag.rs  mod.rs  photo.rs  photo_file.rs  photo_reaction.rs  photo_tag.rs  prelude.rs  sea_orm_active_enums.rs  tag.rs  user.rs
src/graphql/: entrypoint.rs  mod.rs  playground.rs  schema.rs
src/graphql/queries/: autoloaded_entities.rs  me.rs  mod.rs  user.rs
src/middlewares/: cors.rs  database.rs  mod.rs  user.rs
src/middlewares/keycloak/: authorization.rs  jwks.rs  jwt.rs  mod.rs
src/middlewares/oidc/: authorization.rs
src/persistances/: config.rs  db.rs
