[package]
name = "backend-photos"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = "9.3.1"
moka = { version = "0.12.10", features = ["future"] }
reqwest = { version = "0.12.15", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
sea-orm = { version = "1.1.8", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
