[package]
name = "backend-photos"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { version = "7.0.17", features = ["chrono"] }
async-graphql-rocket = "7.0.17"
async-trait = "0.1.88"
jsonwebtoken = "9.3.1"
migration = { path = "migration" }
moka = { version = "0.12.10", features = ["future"] }
reqwest = { version = "0.12.15", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
sea-orm = { version = "1.1.8", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
sea-orm-rocket = "0.5.5"
seaography = "1.1.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.1"
